data/derived/comb/progs/unify/prog1385.ml.out
Characters 28-81:
  let fixpoint (f,b) = wwhile (fun x -> if(f x)=x then (b,false) else (f x,true),b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
